# TFG

./: .gitignore  README.md
TFG/: package-lock.json
TFG/cinesnap/: .env.production  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
TFG/cinesnap/src/: App.jsx  index.css  main.jsx
TFG/cinesnap/src/components/: AuthForm.css  AuthForm.jsx  Carousel.jsx  Collection.jsx  Collections.jsx  CreateCollectionForm.jsx  DVDCard.jsx  Famous.jsx  Footer.jsx  Friends.jsx  GlobalModal.jsx  LoginForm.jsx  LoginToast.jsx  MovieSelectionModal.jsx  Navbar.jsx  ProtectedRoute.jsx  RegisterForm.jsx  Scroll.jsx  UploadImage.jsx
TFG/cinesnap/src/context/: AuthContext.jsx  AuthProvider.jsx  CollectionsProvider.jsx  search.jsx  useAuth.jsx
TFG/cinesnap/src/pages/: Collection.jsx  Home.jsx  Login.jsx  Profile.jsx  Register.jsx  Search.jsx  SharedCollection.jsx  Wishlist.jsx
TFG/cinesnap/src/routes/: AppRouter.jsx
TFG/cinesnap/src/services/: authService.js  collectionService.js  friendService.js  gemini.js  tmdb.js  (+3 more)
backend/: Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_path.py
backend/django_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/django_backend/django_backend_app/: api.py  apps.py  auth.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/django_backend/django_backend_app/migrations/: 0001_initial.py  0002_movie_imdb_id_movie_poster_url.py  0003_user_is_active_user_last_login_user_password.py  0004_alter_user_email.py  0005_user_is_public_user_picture_url.py
(+25 files in other folders)
