[project]
name = "django_backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dj-database-url>=2.3.0",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "pyjwt[crypto]>=2.12.1",
    "requests>=2.33.1",
    "whitenoise>=6.9.0",
]
